--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/defaultdb
 spring.datasource.username=postgres
-spring.datasource.password=db
+spring.datasource.password=postgres
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.defer-datasource-initialization=true
