set redis properties /app.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 
-
+# Database Properties
 spring.datasource.url=jdbc:postgresql://localhost:5432/defaultdb
 spring.datasource.username=postgres
 spring.datasource.password=postgres
@@ -10,3 +10,8 @@ spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
 spring.sql.init.schema-locations=classpath:schema.sql
+#------------------------------------------------------------------
+
+# Redis Caching Properties
+spring.redis.host=localhost
+spring.redis.port=6379
