--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,13 @@
 			<version>3.0.1</version>
 		</dependency>
 
+		<!-- added new redis caching dependency-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
